made signup and login screen like Pictweet

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
   </head>
 
   <body>
-    <header class="header container">
+    <header class="header">
       <div class="header__bar row">
         <h1 class="grid-6"><a href="/">Osaifu</a></h1>
         <% if user_signed_in? %>
