--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,11 +1,11 @@
 <div class="contents row">
-  <h2>Sign up</h2>
+  <h2>新規登録</h2>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :nickname %><em>(6 characters maximum)</em><br />
+    <%= f.label :名前 %><em>(6文字以内)</em><br />
     <%= f.text_field :nickname, autofocus: true, maxlength: "6" %>
   </div>
 
@@ -23,11 +23,11 @@
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :パスワード（確認用） %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "新規登録" %>
   </div>
 <% end %>
