--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
   <body>
     <header class="header">
       <div class="header__bar row">
-        <h1 class="grid-6"><a href="/">Osaifu</a></h1>
+        <h1 class="grid-6"><a href="/items">Osaifu</a></h1>
         <% if user_signed_in? %>
           <div class="user_nav grid-6">
             <span><%= current_user.nickname %>
@@ -35,7 +35,7 @@
               </li>
              </ul>
             </span>
-            <a class="post" href="/tweets/new">登録する</a>
+            <a class="get" href="/items/new">登録する</a>
           </div>
         <% else %>
           <div class="grid-6">
