show registered name on idex page. missed underline on click.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,10 @@
   </head>
 
   <body>
+<style>
+a { text-decoration: none;}
+a:hover { text-decoration: none;}
+</style>
     <header class="header">
       <div class="header__bar row">
         <h1 class="grid-6"><a href="/items">Osaifu</a></h1>
