--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,15 +1,36 @@
 <div class="panel panel-default">
-<div class="panel-heading">項目一覧</div>
+    <div class="panel-heading">項目一覧</div>
 
-  <table class="table">
-    <div class="contents row" >
-      <% @items.each do |item| %>
-        <%= item.name %>
-        <%= item.price %>
-        <%= item.date %>
-        <%= item.text %><br>
-      <% end %>
+    <div class="table-responsive">
+        <table class="table table-boderless">
+            <thead>
+                <tr>
+                  <th>登録者</th>
+                  <th>項目</th>
+                  <th>金額</th>
+                  <th>日付</th>
+                  <th>メモ</th>
+                  <th>割り勘済</th>
+                </tr>
+            </thead>
+            <% @items.each do |item| %>
+            <tbody>
+                <tr>
+                  <td><%= item.user.nickname %></td>
+                  <td><%= item.name %></td>
+                  <td><%= item.price %></td>
+                  <td><%= item.date %></td>
+                  <td><%= item.text %></td>
+                  <!-- <div class="btn-group btn-group-justified" role="group" aria-label="..."> -->
+                    <td><div class="btn-group" role="group">
+                      <button type="button" class="btn btn-default">未</button></div>
+                    <div class="btn-group" role="group">
+                      <button type="button" class="btn btn-default">済</button></div></td>
+                  <!-- </div> -->
+                </tr>
+            </tbody>
+            <% end %>
+        </table>
     </div>
-  </table>
 </div>
 
