--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,10 @@
 <html>
   <head>
     <title>Osaifu</title>
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag 'application', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
     <%= csrf_meta_tags %>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
     <script type="text/javascript">
       WebFontConfig = {
         google: { families: [ 'Unica+One::latin' ] }
@@ -35,7 +36,7 @@ a:hover { text-decoration: none;}
              <ul class="user__info">
               <li>
                <a href="/users/<%= current_user.id %>">マイページ</a>
-                <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+               <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
               </li>
              </ul>
             </span>
@@ -50,7 +51,9 @@ a:hover { text-decoration: none;}
       </div>
     </header>
 
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
 
     <footer>
       <p>
